--- a/app/Views/student/fbsample.html
+++ b/app/Views/student/fbsample.html
@@ -19,7 +19,7 @@ box-shadow: 0px 0px 17px 1px rgba(0,0,0,0.43);}
  <div class="form_box shadow">
  <form method="post" action="practice_ac.php">
  <div class="heading">
-   PUP Taguig ACT-DRS Feedback Form
+   PUP Taguig OCT-DRS Feedback Form
  </div>
  <br/>
  <p style="text-align: center;">How was your system's experience?</p>
